fix: remove overflow-y-auto

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -16,7 +16,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: #ebebeb;
-  overflow: hidden auto;
+  overflow: hidden;
 }
 
 body::-webkit-scrollbar {
